SERVER-56906 Fixed non-determinism in CollatorFactory initializers

GitOrigin-RevId: 4f55709027adfc2158e89f9805724c8fab7ee77d